init first version

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,25 +1,17 @@
-// Colors from https://www.nordtheme.com/docs/colors-and-palettes
+@gray-dark: #1E1E1E;
+@gray-medium: #252526;
+@gray-light: #333333; 
+@gray-lighter: #969696;
 
-// Polar Night
-@base00: #2E3440; // black
-@base01: #3B4252; // dark grey
-@base02: #434C5E; 
-@base03: #4C566A; // grey
+@white: #CCCCCC;
+@unstyled: #AAAAAA;
 
-// Snow Storm
-@base04: #D8DEE9; // grey
-@base05: #E5E9F0; // off white
-@base06: #ECEFF4; // white
-
-// Frost
-@base07: #8FBCBB; // moss green
-@base08: #88C0D0; // ice blue
-@base09: #81A1C1; // water blue
-@base0A: #5E81AC; // deep blue
-
-// Aurora
-@base0B: #BF616A; // red
-@base0C: #D08770; // orange
-@base0D: #EBCB8B; // yellow
-@base0E: #A3BE8C; // green
-@base0F: #B48EAD; // purple
+@orange: #CE9178;
+@orange-light: #D7BA7D;
+@red: #F45385;
+@blue-light: #569CD6;
+@blue: #0E639C;
+@green: #6A9955;
+@green-light: #0DB374;
+@yellow: #CBCB41;
+@pink: #C586C0;
